--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "2.9.4",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
+    "install": "^0.13.0",
     "postcss": "8.4.39",
     "react": "18.3.1",
     "react-dom": "18.3.1",
