--- a/package.json
+++ b/package.json
@@ -8,21 +8,33 @@
     "@fortawesome/fontawesome-free": "5.15.3",
     "@popperjs/core": "2.9.1",
     "@tailwindcss/forms": "0.2.1",
+    "argon2": "^0.41.1",
     "autoprefixer": "10.2.5",
+    "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
     "chart.js": "2.9.4",
+    "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
+    "jsonwebtoken": "^9.0.2",
     "postcss": "8.4.39",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router": "5.3.4",
-    "react-router-dom": "5.3.4",
+    "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "tailwindcss": "2.0.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build && gulp licenses",
+    "start": "cross-env PORT=3001 react-scripts start",
+    "build": "react-scripts build",
+    "backend": "node server.js",
+    "dev": "concurrently \"npm run backend\" \"npm start\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm start",
