--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~52.0.26",
     "expo-status-bar": "~2.0.1",
     "leaflet": "^1.9.4",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
@@ -31,7 +32,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "^13.12.5",
-    "react-router-dom": "^6.28.2"
+    "react-router-dom": "^6.28.2",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
