--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "chart.js": "^4.4.7",
+    "eas-cli": "^14.4.1",
     "expo": "~52.0.26",
     "expo-status-bar": "~2.0.1",
     "leaflet": "^1.9.4",
