--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@popperjs/core": "2.9.1",
     "@tailwindcss/forms": "0.2.1",
     "autoprefixer": "10.2.5",
+    "axios": "^1.7.9",
     "chart.js": "2.9.4",
+    "cors": "^2.8.5",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "postcss": "8.4.39",
