--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "jsonwebtoken": "^9.0.2",
+    "papaparse": "^5.5.1",
     "postcss": "8.4.39",
     "react": "18.3.1",
     "react-dom": "18.3.1",
